--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -512,13 +512,15 @@ const internalNavLinks = [
 
     <article class="calling-for-backup">
 
-        <h2 class="calling-for-backup__title white-title">
-            calling for backup
-        </h2>
-
-        <p class="calling-for-backup__text">
-            Uncovering hypophosphatasia unlocks a world of answers for your patients and validates their long journey of perplexing symptoms. Once you’ve diagnosed hypophosphatasia, assembling a team of professionals to develop a comprehensive care plan for your patients.
-        </p>
+        <div class="wrapper">
+            <h2 class="calling-for-backup__title white-title">
+                calling for backup
+            </h2>
+    
+            <p class="calling-for-backup__text">
+                Uncovering hypophosphatasia unlocks a world of answers for your patients and validates their long journey of perplexing symptoms. Once you’ve diagnosed hypophosphatasia, assembling a team of professionals to develop a comprehensive care plan for your patients.
+            </p>
+        </div>
 
         <div class="calling-for-backup__grafic">
 
@@ -538,9 +540,12 @@ const internalNavLinks = [
                 aria-hidden="false"
                 tabindex="-1"
               >
-              <picture>
+              <picture class="mb-2">
                 <img src="/assets/images/identifying-hpp/adults-older-children-grafic.png" alt="">
               </picture>
+              <p class="text--center color--white">
+                Assemble a multidisciplinary disease management team to provide comprehensive care to your patients with hypophosphatasia.<sup>10,30</sup>
+              </p>
               </section>
               <section
                 id="neotanes-infants-panel"
@@ -550,9 +555,12 @@ const internalNavLinks = [
                 tabindex="-1"
                 hidden
               >
-              <picture>
+              <picture class="mb-2">
                 <img src="/assets/images/identifying-hpp/neonates-infants-grafic.png" alt="">
               </picture>
+              <p class="text--center color--white">
+                Assemble a multidisciplinary disease management team to provide comprehensive care to your patients with hypophosphatasia.<sup>30</sup>
+              </p>
               </section>
 
         </div>
