--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -40,6 +40,10 @@ $color-value in $colors {
     margin-bottom: 0 !important;
 }
 
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
 .md\:mb-2 {
     @media screen and (min-width: 768px) {
         margin-bottom: 2rem !important;
