✨ Add CTA section

--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -510,6 +510,10 @@ const internalNavLinks = [
         id="multidisciplinary-care-team"
     >
 
+    <div class="line-container first">
+        <div class="red-string first"></div>
+    </div>
+
     <article class="calling-for-backup">
 
         <div class="wrapper">
@@ -518,7 +522,7 @@ const internalNavLinks = [
             </h2>
     
             <p class="calling-for-backup__text">
-                Uncovering hypophosphatasia unlocks a world of answers for your patients and validates their long journey of perplexing symptoms. Once you’ve diagnosed hypophosphatasia, assembling a team of professionals to develop a comprehensive care plan for your patients.
+                Uncovering hypophosphatasia unlocks a world of answers for your patients and validates their long journey of perplexing symptoms. Once you’ve diagnosed hypophosphatasia, consider assembling a team of professionals similar to the example below to develop a comprehensive care plan for your patients.
             </p>
         </div>
 
@@ -566,6 +570,18 @@ const internalNavLinks = [
         </div>
 
     </article>
+
+    </section>
+
+    <section class="cta-section">
+
+        <CTA
+        variation="variant-3"
+        buttonLabel="Back to Home"
+        content="Don’t let hypophosphatasia go free"
+        linkURL="/"
+        bypassModal
+      />
 
     </section>
 </Layout>
