--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -67,6 +67,8 @@ sup.symbol-sup {
 .red-string {
     border-bottom: 2px solid $color-red;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    width: calc(100vw + 20rem);
 }
 
 body {
